# grpc_server

./: pyproject.toml
app/service/: main.py
app/service/photo/: mock_repository.py  protocol.py  service.py
pb/: uploadphoto_pb2.py  uploadphoto_pb2.pyi  uploadphoto_pb2_grpc.py
protos/: uploadphoto.proto
